[package]
name = "tv"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.6"
dotenvy = "0.15"
env_logger = "0.10"
hyper = "0.14"
thiserror = "1.0"

[dependencies.maud]
git = "https://github.com/mhutter/maud"
branch = "axum-0.6"
features = ["axum"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.21"
features = ["rt-multi-thread", "macros"]
