[package]
name = "tv"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.7"
env_logger = "0.11"
envir = "0.2"
hyper = "1.0"
thiserror = "1.0"

[dependencies.maud]
version = "0.26"
features = ["axum"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.21"
features = ["rt-multi-thread", "macros"]
