[package]
name = "tv"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.8"
envir = "1.0"
hyper = "1.0"
maud = "0.27"
thiserror = "2.0"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.21"
features = ["rt-multi-thread", "macros"]
